--- a/style.css
+++ b/style.css
@@ -1,23 +1,49 @@
-.box {
-    margin: 10px
+body {
+  background-image: url("background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+  flex-wrap: wrap;
 }
 
-#nric{
-    border: none;
-    font-size: 20px;
+.title {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.box {
+  margin: 10px;
+}
+
+#prefix {
+  background: rgb(255 255 255 / 0%);
+}
+
+#nric {
+  border: none;
+  font-size: 20px;
+  background: rgb(255 255 255 / 0%);
+}
+
+.button-wraper {
+  display: flex;
+  justify-content: space-around;
 }
 
 /* CSS */
 .button {
   appearance: none;
   background-color: #000000;
-  border: 2px solid #1A1A1A;
+  border: 2px solid #1a1a1a;
   border-radius: 15px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
   font-weight: 600;
   line-height: normal;
@@ -28,7 +54,7 @@
   padding: 16px 24px;
   text-align: center;
   text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
