--- a/style.css
+++ b/style.css
@@ -2,76 +2,10 @@ body {
   background-image: url("background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-content: space-around;
-  flex-wrap: wrap;
-}
-
-.title {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.box {
-  margin: 10px;
-}
-
-#prefix {
-  background: rgb(255 255 255 / 0%);
-}
-
-#nric {
-  border: none;
-  font-size: 20px;
-  background: rgb(255 255 255 / 0%);
 }
 
 .button-wraper {
   display: flex;
-  justify-content: space-around;
-}
-
-/* CSS */
-.button {
-  appearance: none;
-  background-color: #000000;
-  border: 2px solid #1a1a1a;
-  border-radius: 15px;
-  box-sizing: border-box;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 16px;
-  font-weight: 600;
-  line-height: normal;
-  margin: 0;
-  min-height: 60px;
-  min-width: 0;
-  outline: none;
-  padding: 16px 24px;
-  text-align: center;
-  text-decoration: none;
-  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  /* width: 100%; */
-  will-change: transform;
-}
-
-.button:disabled {
-  pointer-events: none;
-}
-
-.button:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-  transform: translateY(-2px);
-}
-
-.button:active {
-  box-shadow: none;
-  transform: translateY(0);
+  flex-direction: column;
+  align-items: center;
 }
